Criando Feign Client para o microsserviço de Gerenciamento de Usuários

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,6 @@ spring.jackson.serialization.indent_output=true
 
 #SERVER
 server.error.include-message=always
+
+#OPEN FEIGN CLIENTS
+integrations.clients.gerenciamento-usuarios.url=http://localhost:9090
