Criando Feign Client para o microsserviço de Catálogo de Produtos

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,3 +17,4 @@ server.error.include-message=always
 
 #OPEN FEIGN CLIENTS
 integrations.clients.gerenciamento-usuarios.url=http://localhost:9090
+integrations.clients.catalogo-produtos.url=http://localhost:8082
