--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,4 @@ server.error.include-message=always
 #OPEN FEIGN CLIENTS
 integrations.clients.gerenciamento-usuarios.url=http://localhost:9090
 integrations.clients.catalogo-produtos.url=http://localhost:8082
+integrations.clients.servico-pagamentos.url=http://localhost:8081
