Habilitando logs para os clients Open Feign

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,3 +19,9 @@ server.error.include-message=always
 integrations.clients.gerenciamento-usuarios.url=http://localhost:9090
 integrations.clients.catalogo-produtos.url=http://localhost:8082
 integrations.clients.servico-pagamentos.url=http://localhost:8081
+
+#OPEN FEIGN LOGS
+logging.level.org.springframework.web.client=DEBUG
+logging.level.br.com.zup.edu.commerce.marketplace.clients.GerenciamentoUsuariosClient=DEBUG
+logging.level.br.com.zup.edu.commerce.marketplace.clients.CatalogoProdutosClient=DEBUG
+logging.level.br.com.zup.edu.commerce.marketplace.clients.ServicoPagamentosClient=DEBUG
