--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,7 +21,11 @@ integrations.clients.catalogo-produtos.url=http://localhost:8082
 integrations.clients.servico-pagamentos.url=http://localhost:8081
 
 #OPEN FEIGN LOGS
-logging.level.org.springframework.web.client=DEBUG
+feign.client.config.GerenciamentoUsuariosClient.decode404=true
+feign.client.config.GerenciamentoUsuariosClient.loggerLevel=full
+feign.client.config.CatalogoProdutosClient.decode404=true
+feign.client.config.CatalogoProdutosClient.loggerLevel=full
+feign.client.config.ServicoPagamentosClient.loggerLevel=full
 logging.level.br.com.zup.edu.commerce.marketplace.clients.GerenciamentoUsuariosClient=DEBUG
 logging.level.br.com.zup.edu.commerce.marketplace.clients.CatalogoProdutosClient=DEBUG
 logging.level.br.com.zup.edu.commerce.marketplace.clients.ServicoPagamentosClient=DEBUG
