Corrigindo e melhorando logs dos Feign Clients

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,11 +21,8 @@ integrations.clients.catalogo-produtos.url=http://localhost:8082
 integrations.clients.servico-pagamentos.url=http://localhost:8081
 
 #OPEN FEIGN LOGS
-feign.client.config.GerenciamentoUsuariosClient.decode404=true
-feign.client.config.GerenciamentoUsuariosClient.loggerLevel=full
-feign.client.config.CatalogoProdutosClient.decode404=true
-feign.client.config.CatalogoProdutosClient.loggerLevel=full
-feign.client.config.ServicoPagamentosClient.loggerLevel=full
-logging.level.br.com.zup.edu.commerce.marketplace.clients.GerenciamentoUsuariosClient=DEBUG
-logging.level.br.com.zup.edu.commerce.marketplace.clients.CatalogoProdutosClient=DEBUG
-logging.level.br.com.zup.edu.commerce.marketplace.clients.ServicoPagamentosClient=DEBUG
+feign.client.config.default.loggerLevel=full
+feign.client.config.gerenciamentoUsuariosClient.decode404=true
+feign.client.config.catalogoProdutosClient.decode404=true
+logging.level.br.com.zup.edu.commerce.marketplace.clients=DEBUG
+logging.level.org.springframework.web.client=DEBUG
