Adicionando Kakfa no projeto

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,3 +26,9 @@ feign.client.config.gerenciamentoUsuariosClient.decode404=true
 feign.client.config.catalogoProdutosClient.decode404=true
 logging.level.br.com.zup.edu.commerce.marketplace.clients=DEBUG
 logging.level.org.springframework.web.client=DEBUG
+
+#KAFKA
+spring.kafka.topics.venda.name=Venda
+spring.kafka.producer.bootstrap-servers=127.0.0.1:9092
+spring.kafka.producer.key-serializer=org.springframework.kafka.support.serializer.JsonSerializer
+spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
