Inserindo logs no controller de cadastro de uma venda

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,8 +6,8 @@ spring.datasource.password=${DB_PASSWORD:admin}
 
 #JPA
 spring.jpa.hibernate.ddl-auto=${DDL_MODE:update}
-spring.jpa.show-sql=${SHOW_SQL:true}
-spring.jpa.properties.hibernate.format_sql=${FORMAT_SQL:true}
+spring.jpa.show-sql=${SHOW_SQL:false}
+spring.jpa.properties.hibernate.format_sql=${FORMAT_SQL:false}
 spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jackson.serialization.indent_output=true
