Adicionando Spring Actuator

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,6 +15,10 @@ spring.jackson.serialization.indent_output=true
 #SERVER
 server.error.include-message=always
 
+#MANAGEMENT
+management.endpoints.web.exposure.include=*
+management.endpoint.health.show-details=always
+
 #OPEN FEIGN CLIENTS
 integrations.clients.gerenciamento-usuarios.url=http://localhost:9090
 integrations.clients.catalogo-produtos.url=http://localhost:8082
