Adicionando Health Indicators para os serviços dos quais a aplicação depende

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,8 +21,11 @@ management.endpoint.health.show-details=always
 
 #OPEN FEIGN CLIENTS
 integrations.clients.gerenciamento-usuarios.url=http://localhost:9090
+integrations.clients.gerenciamento-usuarios.port=9090
 integrations.clients.catalogo-produtos.url=http://localhost:8082
+integrations.clients.catalogo-produtos.port=8082
 integrations.clients.servico-pagamentos.url=http://localhost:8081
+integrations.clients.servico-pagamentos.port=8081
 
 #OPEN FEIGN LOGS
 feign.client.config.default.loggerLevel=full
@@ -32,6 +35,8 @@ logging.level.br.com.zup.edu.commerce.marketplace.clients=DEBUG
 logging.level.org.springframework.web.client=DEBUG
 
 #KAFKA
+spring.kafka.url=http://127.0.0.1:9092
+spring.kafka.port=9092
 spring.kafka.topics.venda.name=Venda
 spring.kafka.producer.bootstrap-servers=127.0.0.1:9092
 spring.kafka.producer.key-serializer=org.springframework.kafka.support.serializer.JsonSerializer
