Alterando configurações da aplicação

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,7 @@ spring.datasource.username=${DB_USERNAME:admin}
 spring.datasource.password=${DB_PASSWORD:admin}
 
 #JPA
+spring.jpa.open-in-view=false
 spring.jpa.hibernate.ddl-auto=${DDL_MODE:update}
 spring.jpa.show-sql=${SHOW_SQL:false}
 spring.jpa.properties.hibernate.format_sql=${FORMAT_SQL:false}
@@ -27,8 +28,10 @@ integrations.clients.catalogo-produtos.port=8082
 integrations.clients.servico-pagamentos.url=http://localhost:8081
 integrations.clients.servico-pagamentos.port=8081
 
-#OPEN FEIGN LOGS
+#OPEN FEIGN CONFIGURATIONS
 feign.client.config.default.loggerLevel=full
+feign.client.config.default.connectTimeout=5000
+feign.client.config.default.readTimeout=10000
 feign.client.config.gerenciamentoUsuariosClient.decode404=true
 feign.client.config.catalogoProdutosClient.decode404=true
 logging.level.br.com.zup.edu.commerce.marketplace.clients=DEBUG
